--- a/Quality/Quality/Areas/BulkFGT/Views/RandomTumblePillingTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/RandomTumblePillingTest/Index.cshtml
@@ -1039,7 +1039,7 @@
             }
 
             $.ajax({
-                url: "@Url.Action("SendMailToMR")",
+                url: "@Url.Action("SendMail")",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({
