--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashTest.cshtml
@@ -231,7 +231,7 @@
                                                 <select id="WashingTemperature" name="WashingTemperature" disabled="disabled" style="width:157px;">
                                                     @foreach (var item in Model.WashingTemperatureData)
                                                     {
-                                                        string selected = item.Text.Equals(Model.WashingTemperature.ToString()) ? "selected" : "";
+                                                        string selected = item.Text == Model.WashingTemperature.ToString() ? "selected" : "";
                                                         <option value="@item.Value" @selected>@item.Text</option>
                                                     }
                                                 </select>
