ISP20240057 - Bulk全功能的兩種寄信型態，背後邏輯整合

--- a/Quality/Quality/Areas/BulkFGT/Views/DailyMoisture/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/DailyMoisture/Index.cshtml
@@ -1428,10 +1428,14 @@
             async: false,
             success: function (data) {
                 if (data.result) {
-                    msg.WithSuccess("Success");
+                    msg.WithSuccesCheck("Success", function () {
+                        $("#btnQuery").click();
+                    });
                 }
                 else {
-                    msg.WithWarning(data.resultMsg);
+                    msg.WithWarningCheck(data.resultMsg, function () {
+                        location.reload();
+                    });
                 }
             },
             error: function (xhr, ajaxOptions, thrownError) {
@@ -1458,6 +1462,7 @@
             success: function (data) {
                 if (data.result) {
                     msg.WithSuccesCheck("Success", function () {
+                        $("#btnQuery").click();
                     });
                 }
                 else {
