--- a/Quality/Quality/Areas/BulkFGT/Views/HydrostaticPressureWaterproofTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/HydrostaticPressureWaterproofTest/Index.cshtml
@@ -1286,7 +1286,7 @@
             success: function (data) {
                 if (data.result) {
                     msg.WithSuccesCheck("Success", function () {
-                        location.reload();
+                        $("#btnQuery").click();
                     });
                 }
                 else {
@@ -1319,7 +1319,7 @@
                 success: function (data) {
                 if (data.result) {
                     msg.WithSuccesCheck("Success", function () {
-                        location.reload();
+                        $("#btnQuery").click();
                     });
                 }
                 else {
