--- a/Quality/Quality/Areas/BulkFGT/Views/MartindalePillingTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MartindalePillingTest/Index.cshtml
@@ -1189,7 +1189,7 @@
             success: function (data) {
                 if (data.result) {
                     msg.WithSuccesCheck("Success", function () {
-                        location.reload();
+                        $("#btnQuery").click();
                     });
                 }
                 else {
@@ -1223,7 +1223,7 @@
             success: function (data) {
                 if (data.result) {
                     msg.WithSuccesCheck("Success", function () {
-                        location.reload();
+                        $("#btnQuery").click();
                     });
                 }
                 else {
