--- a/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
@@ -1149,7 +1149,7 @@
             success: function (data) {
                 if (data.result) {
                     msg.WithSuccesCheck("Success", function () {
-                        location.reload();
+                        $("#btnQuery").click();
                     });
                 }
                 else {
