--- a/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Detail.cshtml
@@ -1197,7 +1197,7 @@
                                 break;
                             case 3:
                                 ResultStain = $(this).children("option:selected").val();
-                                break;                            
+                                break;
                         }
                     }
                     else {
@@ -1379,36 +1379,10 @@
             ToReport(1);
         });
 
-            $('#SendMail').unbind('click').on('click', function () {
+        $('#SendMail').unbind('click').on('click', function () {
+            var para = '';
+            window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=400');
 
-                $.ajax({
-                    url: "@Url.Action("SendMailToMR", "FabricColorFastness", new { Area = "BulkFGT" })",
-                    type: 'POST',
-                    contentType: "application/json; charset=utf-8",
-                    data: JSON.stringify({
-                        ID: $('#Main_ID').val()
-                    }),
-                    async: false,
-                    success: function (data) {
-                        if (data.Result) {
-                            var para = "?To=";
-                            para += "&CC=" + '@ViewBag.UserMail';
-                            para += "&Subject=" + "Washing Fastness Test – ReportNo:" + '@Model.Main.ID';
-                            para += "&Body=" + "Attachment is Washing Fastness Test– ReportNo:" + '@Model.Main.ID' + " detail data";
-                            para += "&file=" + data.FileName;
-                            @*para += "&IsShowAIComment=true";
-                            para += "&Type=Washing Fastness";
-                            para += "&OrderID=" + '@Model.Main.POID';*@
-                            window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=600');
-                        }
-                        else {
-                            msg.WithError(data.ErrorMessage);
-                        }
-                    },
-                    error: function (xhr, ajaxOptions, thrownError) {
-                        console.log(xhr.responseText);
-                    }
-                });
         });
     }
 
@@ -1447,7 +1421,7 @@
         });
 
         $.ajax({
-            url: "@Url.Action("FailMail", "FabricColorFastness", new { Area = "BulkFGT" })",
+            url: "@Url.Action("SendMail")",
             type: 'POST',
             contentType: "application/json; charset=utf-8",
             data: JSON.stringify({ POID: $('#Main_POID').val(), ID: $('#Main_ID').val(), TestNo: $('#Main_TestNo').val(), TO: to, CC: cc }),
@@ -1471,6 +1445,40 @@
                 });
             }
         });
+    }
+
+    function GetSendMailer(data) {
+        var to = data.To;
+        var cc = data.CC;
+
+        if (to != "") {
+
+        $.ajax({
+            url: "@Url.Action("SendMail")",
+            type: 'POST',
+            contentType: "application/json; charset=utf-8",
+            data: JSON.stringify({ POID: $('#Main_POID').val(), ID: $('#Main_ID').val(), TestNo: $('#Main_TestNo').val(), TO: to, CC: cc }),
+            async: false,
+            success: function (data) {
+                if (data.Result) {
+                    msg.WithSuccesCheck("Success", function () {
+                        location.reload();
+                    });
+                }
+                else {
+                    msg.WithWarningCheck(data.ErrorMessage, function () {
+                        location.reload();
+                    });
+                }
+            },
+            error: function (xhr, ajaxOptions, thrownError) {
+                // console.log(xhr.responseText);
+                msg.WithWarningCheck(xhr.responseText, function () {
+                    location.reload();
+                });
+            }
+        });
+        }
     }
 
     function AddDetailRow() {
