--- a/Quality/Quality/Areas/BulkFGT/Views/WaterAbsorbency/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/WaterAbsorbency/Index.cshtml
@@ -911,32 +911,9 @@
             if ($("#Main_ReportNo").val() == '') {
                 return false;
             }
+            var para = '';
+            window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=400');
 
-            $.ajax({
-                url: "@Url.Action("SendMailToMR")",
-                type: 'POST',
-                contentType: "application/json; charset=utf-8",
-                data: JSON.stringify({
-                    ReportNo: $('#Main_ReportNo').val()
-                }),
-                async: false,
-                success: function (data) {
-                    if (data.Result) {
-                        var para = "?To=";
-                        para += "&CC=";
-                        para += "&Subject=" + "Bulk Water Absorbency Test – ReportNo:" + $("#Main_ReportNo").val();
-                        para += `&Body=Attachment Is Bulk Water Absorbency Test - ReportNo:${$("#Main_ReportNo").val() } detail data`;
-                        para += "&file=" + data.FileName;
-                        window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=600');
-                    }
-                    else {
-                        msg.WithError(data.ErrorMessage);
-                    }
-                },
-                error: function (xhr, ajaxOptions, thrownError) {
-                    console.log(xhr.responseText);
-                }
-            });
         });
 
         $("#Excel").on("click", function () {
@@ -995,9 +972,14 @@
                     async: false,
                     success: function (data) {
                         if (data.Result) {
-                            msg.WithSuccesCheck("Success", function () {
-                                $("#btnQuery").click();
-                            });
+                            if (data.Action == "FailMail()") {
+                                FailMail();
+                            }
+                            else {
+                                msg.WithSuccesCheck("Success", function () {
+                                    $("#btnQuery").click();
+                                });
+                            }
                         }
                         else {
                             msg.WithError(data.ErrMsg);
@@ -1147,14 +1129,14 @@
         else if (parseFloat(rtnval) < 0) {
             rtnval = 0;
         }
-        values.value = Number.parseFloat(rtnval).toFixed(2); 
+        values.value = Number.parseFloat(rtnval).toFixed(2);
         if (type == "WOVEN") {
             if (rtnval >= 5) {
                 result.val('Fail').css({ color: "red"});
             }
             else {
                 result.val('Pass').css({ color: "blue" });
-            }            
+            }
         }
         else if (type == "KNIT") {
             if (rtnval >= 3) {
@@ -1171,7 +1153,7 @@
     }
 
     function CheckLen(sel) {
-        if (sel.value.length > 5) {            
+        if (sel.value.length > 5) {
             sel.value = sel.value.substring(0, 5);
         }
 
@@ -1182,4 +1164,77 @@
         $('#btnQuery').unbind('click').click();
     }
 
+    function FailMail() {
+        var para = "?Title=" + $('.page-header span').html() + "&FactoryID=@ViewBag.FactoryID&Type=BulkFGT";
+        window.open('@Url.Action("TestFailMailList", "PublicWindow",new { Area=""})' + para, 'Mail List', config = 'toolbar=no,status=no,location=no,width=650,height=750');
+    }
+
+    function GetTestFailMailList(data) {
+        var to = "";
+        var cc = "";
+        $.each(data, function (index, value) {
+            to += value.To + ';';
+            cc += value.CC + ';';
+        });
+
+        $.ajax({
+            url: "@Url.Action("SendMail")",
+            type: 'POST',
+            contentType: "application/json; charset=utf-8",
+            data: JSON.stringify({ ReportNo: $('#Main_ReportNo').val(), TO: to, CC: cc }),
+            async: false,
+            success: function (data) {
+                if (data.result) {
+                    msg.WithSuccesCheck("Success", function () {
+                        $("#btnQuery").click();
+                    });
+                }
+                else {
+                    msg.WithWarningCheck(data.resultMsg, function () {
+                        location.reload();
+                    });
+                }
+            },
+            error: function (xhr, ajaxOptions, thrownError) {
+                // console.log(xhr.responseText);
+                msg.WithWarningCheck(xhr.responseText, function () {
+                    location.reload();
+                });
+            }
+        });
+    }
+
+    function GetSendMailer(data) {
+        var to = data.To;
+        var cc = data.CC;
+
+        if (to != "") {
+
+        $.ajax({
+            url: "@Url.Action("SendMail")",
+            type: 'POST',
+            contentType: "application/json; charset=utf-8",
+            data: JSON.stringify({ ReportNo: $('#Main_ReportNo').val(), TO: to, CC: cc }),
+            async: false,
+            success: function (data) {
+                if (data.result) {
+                    msg.WithSuccesCheck("Success", function () {
+                        $("#btnQuery").click();
+                    });
+                }
+                else {
+                    msg.WithWarningCheck(data.resultMsg, function () {
+                        location.reload();
+                    });
+                }
+            },
+            error: function (xhr, ajaxOptions, thrownError) {
+                // console.log(xhr.responseText);
+                msg.WithWarningCheck(xhr.responseText, function () {
+                    location.reload();
+                });
+            }
+        });
+        }
+    }
 </script>
