--- a/Quality/Quality/Areas/BulkFGT/Views/AgingHydrolysisTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AgingHydrolysisTest/Index.cshtml
@@ -782,6 +782,7 @@
                     let targetRow = t.parent('div').attr('class').split(' ').filter(o => o.includes('Row'))[0];
 
                     $(`.${targetRow}`).remove();
+                    reBuildIndex();
                     msg.WithSuccess("Delete Success");
                 }, null);
         });
@@ -919,5 +920,51 @@
 
     function SpNoChange(value) {
         $('#btnQuery').unbind('click').click();
+    }
+
+    // 若表身有資料被刪除，則重新編號索引
+    function reBuildIndex() {
+
+        // 取剩下的Row
+        var rows = $('.detailRowIdx');
+
+        // 新的索引，一律從0開始
+        var newIndex = 0;
+
+        // 剩下的Row逐一處理，可能會有連號造成Index不連貫，例如原本有三筆資料，索引0、1、2，但1刪掉了，剩下的兩筆索引要重新編成0、1
+        rows.each(function () {
+
+            // 取得舊索引
+            var oldIndex = $(this).val();
+
+            // 取得Name或ID用到舊索引的控制項，一律換成新索引
+            $(`input[name^="DetailList[${oldIndex}]"]`).each(function () {
+                var oldName = $(this).attr('name');
+                var newName = oldName.replace(oldIndex, newIndex);
+                $(this).attr('name', newName);
+            })
+
+            $(`input[id^="DetailList_${oldIndex}_"]`).each(function () {
+                var oldID = $(this).attr('id');
+                var newID = oldID.replace(oldIndex, newIndex);
+                $(this).attr('id', newID);
+            })
+
+            $(`select[name^="DetailList[${oldIndex}]"]`).each(function () {
+                var oldName = $(this).attr('name');
+                var newName = oldName.replace(oldIndex, newIndex);
+                $(this).attr('name', newName);
+
+            })
+
+            $(`select[id^="DetailList_${oldIndex}_"]`).each(function () {
+                var oldID = $(this).attr('id');
+                var newID = oldID.replace(oldIndex, newIndex);
+                $(this).attr('id', newID);
+            })
+            $(this).attr('value', newIndex);
+            newIndex++;
+        });
+
     }
 </script>
