--- a/Quality/Quality/Areas/BulkFGT/Views/AgingHydrolysisTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AgingHydrolysisTest/Index.cshtml
@@ -740,6 +740,7 @@
                 }
             });
 
+            $('select').removeAttr("disabled");
 
             $("#SaveSubmit").click();
 
